# FMU-Arduino

./: .gitignore  FMU-Arduino.ino  LICENSE  NOTES.md  README-build.md  README-memory.md  README.md  actuators.ino  airdata.ino  aura-sensors.ino  comms.ino  config.h  config.ino  fmu-arduino.ino  imu.ino  led.ino  message_ids.h  pwm.ino  sbus.ino  setup_board.h  structs.h  structs_config.h
archive/: dig_filter.h  dtss.cpp  dtss.h  land3.cpp  land3.h  nav_mgr.cpp  nav_mgr.h  predictor.h  summer.h
archive/nav_common/: nav_functions.h  structs.h
archive/nav_ekf15/: EKF_15state.h
docs/: Calibration.md  HIL-Testing-Notes.md  Hardware-Resources.md  Integration.md  MTP+Fedora44.md  NOTES.md  Notes-ground-elevation.md  Teensyduino-Setup-Important.md  calibration.md
examples/: README.md
examples/gimbal/: autopilot.json  comms.json  config.json  imu-calibration.json  switches.json
examples/rascal/: autopilot.json  comms.json  config.json  fcs.json  mission.json  sensors.json  switches.json
examples/skycatcher/: autopilot.json  comms.json  config.json  fcs.json  imu-calibration.json  mission.json  nav.json
examples/skywalker/: autopilot.json  comms.json  config.json  (+6 more)
python/: CMakeLists.txt  fcs.cpp  pyproject.toml
src/: actuators.cpp  actuators.h  airdata.cpp  airdata.h  comms.cpp  comms.h  config.cpp  config.h  ekf.cpp  ekf.h  gps.cpp  gps.h  imu.cpp  imu.h  imu_mgr.cpp  imu_mgr.h  led.cpp  led.h  mixer.cpp  mixer.h  nodes.cpp  nodes.h  ns_messages.h  nst_messages.h  pilot.cpp  pilot.h  power.cpp  power.h  props2.cpp  props2.h  pwm.cpp  pwm.h  sbus.cpp  sbus.h
(+243 files in other folders)
